--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -15,23 +8,41 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-
+      contents: write
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      # Set up Gradle and cache dependencies for faster build times
+      #- name: Setup Gradle
+      #  uses: gradle/gradle-build-action@v2
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew assembleDebug --stacktrace
+      # Generate Gradle Wrapper if it doesn't exist
+      #- name: Generate Gradle Wrapper
+      #  run: gradle wrapper
+
+      # Build the project using the Gradle Wrapper
+      - name: Build with Gradle Wrapper
+        run: |
+          ./gradlew assembleDebug
+
+      # Find and copy the APK file
+      - name: Find and copy APK
+        run: |
+          file=$(find . -name "*.apk" | head -n 1)
+          cp "$file" app-debug.apk
+
+      # Upload the APK file
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-debug.apk
+          path: app-debug.apk
+          if-no-files-found: error
+          
