--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
         echo ""
         
     - name: Upload APK
-      uses: actions/upload-artifact@v3  # Aktualisiert auf die neueste Version
+      uses: actions/upload-artifact@v2  # Aktualisiert auf die neueste nicht veraltete Version
       with:
         name: app-debug.apk
         path: /home/runner/app-debug.apk
