--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,6 +24,8 @@ jobs:
         sudo apt install git zip unzip
         #git clone https://github.com/xdrfvgz/APIGardian
         git clone https://github.com/xdrfvgz/local_llm
+        gradle wrapper
+        ./gradlew assembleDebug
         #cd APIGardian/system_setup
         #bash ./install.sh
         #bash ./build_apk.sh
