--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,15 +22,11 @@ jobs:
       run: |
         sudo apt update
         sudo apt install git zip unzip
-        #git clone https://github.com/xdrfvgz/APIGardian
-        git clone https://github.com/xdrfvgz/local_llm
-        cd local_llm
-        gradle wrapper
-        ./gradlew assembleDebug
-        #cd APIGardian/system_setup
-        #bash ./install.sh
-        #bash ./build_apk.sh
-        #cd ..
+        git clone https://github.com/xdrfvgz/APIGardian
+        cd APIGardian/system_setup
+        bash ./install.sh
+        bash ./build_apk.sh
+        cd ..
         cp app/build/outputs/apk/debug/app-debug.apk $HOME/
         
     - name: Find APK
